@@ -26,6 +26,7 @@ Changelog
  * Render the Wagtail User Bar on non `Page` views (Caitlin White, Coen van der Kamp)
  * Add ability to define `form_classname` on `ListBlock` & `StreamBlock` (LB (Ben Johnston))
  * Add documentation about how to use `Rustface` for image feature detection (Neal Todd)
+ * Improve performance of public/not_public queries in `PageQuerySet` (Timothy Bautista)
  * Fix: Support IPv6 domain (Alex Gleason, Coen van der Kamp)
  * Fix: Ensure link to add a new user works when no users are visible in the users list (LB (Ben Johnston))
  * Fix: `AbstractEmailForm` saved submission fields are now aligned with the email content fields, `form.cleaned_data` will be used instead of `form.fields` (Haydn Greatnews)
